--- a/OtelMvcProject/Views/Default/Index2.cshtml
+++ b/OtelMvcProject/Views/Default/Index2.cshtml
@@ -6,4 +6,6 @@
 
 <h2>Burası 2 numaralı index sayfası</h2>
 
-<a href="/Default/Index">Index'e Dön</a> @*DefaultController'ı içerinde bulunan Index sayfasına dön.Sayfalar arası geçiş yapıldı.*@
+<a href="/Default/Index"class="btn btn-warning">Index'e Dön</a> @*DefaultController'ı içerinde bulunan Index sayfasına dön.Sayfalar arası geçiş yapıldı.*@
+<br /><br />
+<a href="/Default/Index3/" class="btn btn-danger">Index3 Sayfası</a>
