--- a/OtelMvcProject/Views/Default/Index.cshtml
+++ b/OtelMvcProject/Views/Default/Index.cshtml
@@ -6,5 +6,5 @@
 
 <h2>Burası Index sayfasıdır.</h2> @*/verilerin listelendiği sayfa*@
 <p>Merhaba Dünya</p>
-<a href="/Default/Index2/">Index2 Sayfasını Aç</a> @*default controlleri içerisinde bulunan Index2 sayfasını aç. Sayfalar arası geçiş yapıldı*@
+<a href="/Default/Index2/" class="btn btn-primary">Index2 Sayfasını Aç</a> @*default controlleri içerisinde bulunan Index2 sayfasını aç. Sayfalar arası geçiş yapıldı*@
 
