--- a/OtelMvcProject/Views/Shared/_OtelLayout.cshtml
+++ b/OtelMvcProject/Views/Shared/_OtelLayout.cshtml
@@ -4,16 +4,36 @@
 }
 
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title>_OtelLayout</title>
+    <title>Bootstrap Example</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <h3>Burası Otel Layout Sayfasıdır.</h3>
-    <div>
-        @RenderBody() 
+
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">Otel Projesi</a>
+            </div>
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Ana Sayfa</a></li>
+                <li><a href="#">Rezervasyon</a></li>
+                <li><a href="#">Odalar</a></li>
+                <li><a href="#">Yorumlarımız</a></li> @*li herbirinin ayrı menü olmasını sağlayan yapı.*@
+                <li><a href="#">İletişim</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="container"> @*İçerik Alanı*@
+        @RenderBody()
     </div>
+
 </body>
 </html>
+
