--- a/OtelMvcProject/Views/Default/PartialFooter.cshtml
+++ b/OtelMvcProject/Views/Default/PartialFooter.cshtml
@@ -3,19 +3,18 @@
         <div class="container py-lg-4">
             <div class="row footer-top-29">
                 <div class="col-lg-3 col-md-6 col-sm-8 footer-list-29 footer-1">
-                    <h6 class="footer-title-29">Contact Us</h6>
+                    <h6 class="footer-title-29">Bize Ulaşın</h6>
                     <ul>
                         <li>
                             <p>
-                                <span class="fa fa-map-marker"></span> Luxury hotel, #32841 block, #221DRS Rental & Paid rooms
-                                business, UK.
+                                <span class="fa fa-map-marker"></span> MVC Proje Oteli, #32841 B Blok, Balıkesir & Ayvalık, Türkiye.
                             </p>
                         </li>
-                        <li><a href="tel:+7-800-999-800"><span class="fa fa-phone"></span> +(21)-255-999-8888</a></li>
+                        <li><a href="tel:+7-800-999-800"><span class="fa fa-phone"></span> +(90)-530-000-0000</a></li>
                         <li>
                             <a href="mailto:hotels@mail.com" class="mail">
                                 <span class="fa fa-envelope-open-o"></span>
-                                hotels@mail.com
+                                hotelmvcproject@gmail.com
                             </a>
                         </li>
                     </ul>
@@ -23,34 +22,34 @@
                 <div class="col-lg-2 col-md-6 col-sm-4 footer-list-29 footer-2 mt-sm-0 mt-5">
 
                     <ul>
-                        <h6 class="footer-title-29">Useful Links</h6>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About hotels</a></li>
-                        <li><a href="#blogposts"> Blog posts</a></li>
-                        <li><a href="contact.html">Contact us</a></li>
+                        <h6 class="footer-title-29">Site Haritası</h6>
+                        <li><a href="index.html">Ana Sayfa</a></li>
+                        <li><a href="about.html">Hakkımızda</a></li>
+                        <li><a href="#blogposts">Hizmetlerimiz</a></li>
+                        <li><a href="contact.html">Bize Ulaşın</a></li>
+                        <li><a href="contact.html">Rezervasyon Yap</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-5 footer-list-29 footer-3 mt-lg-0 mt-5">
-                    <h6 class="footer-title-29">Latest from blog</h6>
+                    <h6 class="footer-title-29">İstatistikler</h6>
                     <div class="footer-post mb-4">
-                        <a href="#url">Work Passionately</a>
-                        <p class="small"><span class="fa fa-clock-o"></span> March 9, 2020</p>
+                        <a href="#url">Toplam Boş Oda</a>
+                        <p class="small"><span class="fa fa-clock-o"></span> 34</p>
                     </div>
                     <div class="footer-post">
-                        <a href="#url">Work Passionately without any hesitation</a>
-                        <p class="small"><span class="fa fa-clock-o"></span> March 9, 2020</p>
+                        <a href="#url">Dolu Oda Sayısı</a>
+                        <p class="small"><span class="fa fa-clock-o"></span> 21</p>
                     </div>
 
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-7 footer-list-29 footer-4 mt-lg-0 mt-5">
-                    <h6 class="footer-title-29">Newsletter </h6>
+                    <h6 class="footer-title-29">Mail Bülteni </h6>
                     <p>
-                        Enter your email and receive the latest news from us.
-                        We'll never share your email address
+                        Mail adresinizi sistemimize kaydederek indirimli tatil fiyatlarından ve paket avantajlarımızdan haberdar olabilirsiniz. 
                     </p>
 
                     <form action="#" class="subscribe" method="post">
-                        <input type="email" name="email" placeholder="Your Email Address" required="">
+                        <input type="email" name="email" placeholder="Mail Adresinizi Giriniz" required="">
                         <button><span class="fa fa-envelope-o"></span></button>
                     </form>
                 </div>
