--- a/OtelMvcProject/Views/Default/PartialSosyalMedya.cshtml
+++ b/OtelMvcProject/Views/Default/PartialSosyalMedya.cshtml
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row bottom-copies">
             <p class="col-lg-8 copy-footer-29">
-                © 2020 Hotels. All rights reserved | Designed by <a href="https://w3layouts.com">W3layouts</a>
+                © 2022 MVC Proje Oteli. Tüm Hakları Saklıdır | Designed by <a href="https://w3layouts.com">W3layouts</a>
             </p>
 
             <div class="col-lg-4 main-social-footer-29">
