--- a/OtelMvcProject/Views/Shared/_OtelVitrin.cshtml
+++ b/OtelMvcProject/Views/Shared/_OtelVitrin.cshtml
@@ -43,13 +43,13 @@ Author URL: http://w3layouts.com
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item home__active">
-                            <a class="nav-link" href="index.html">Ana Sayfa</a>
+                            <a class="nav-link" href="/Default/AnaSayfa/">Ana Sayfa</a>
                         </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" href="about.html">Hakkımızda</a>
+                        <li class="nav-item about_active">
+                            <a class="nav-link" href="/Default/Hakkimizda/">Hakkımızda</a>
                         </li>
                         <li class="nav-item services__active">
-                            <a class="nav-link" href="services.html">Hizmetlerimiz</a>
+                            <a class="nav-link" href="/Hizmetler/Hizmet/">Hizmetlerimiz</a>
                         </li>
                         <li class="nav-item contact__active">
                             <a class="nav-link" href="contact.html">İletişim</a>
@@ -65,10 +65,10 @@ Author URL: http://w3layouts.com
     @RenderBody()
 
 
-    <!-- footer start -->
-    @Html.Partial("PartialFooter")
+    <!-- footer start((ActionResult,Controller)) -->
+    @Html.Action("PartialFooter","Default")
 
-    @Html.Partial("PartialSosyalMedya")
+    @Html.Action("PartialSosyalMedya","Default")
 
     <!-- Template JavaScript -->
     <script src="~/hotels-starter/assets/js/jquery-3.3.1.min.js"></script>
