--- a/OtelMvcProject/Views/Shared/_OtelVitrin.cshtml
+++ b/OtelMvcProject/Views/Shared/_OtelVitrin.cshtml
@@ -43,7 +43,7 @@ Author URL: http://w3layouts.com
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item home__active">
-                            <a class="nav-link" href="/Default/AnaSayfa/">Ana Sayfa</a>
+                            <a class="nav-link" href="/AnaSayfa/Index/">Ana Sayfa</a>
                         </li>
                         <li class="nav-item about_active">
                             <a class="nav-link" href="/Default/Hakkimizda/">Hakkımızda</a>
