--- a/OtelMvcProject/Views/AnaSayfa/Index.cshtml
+++ b/OtelMvcProject/Views/AnaSayfa/Index.cshtml
@@ -166,8 +166,8 @@ Author URL: http://w3layouts.com
                     <a href="about.html" class="btn btn-style btn-primary mt-sm-5 mt-4">Learn About Us</a>
                 </div>
                 <div class="col-lg-6 about-right position-relative mt-lg-0 mt-5">
-                    <img src="assets/images/top.jpg" alt="" class="img-fluid img-border mt-4" />
-                    <img src="assets/images/bottom.jpg" alt="" class="img-fluid position-absolute img-position" />
+                    <img src="~/hotels-starter/assets/images/top.jpg" alt="" class="img-fluid img-border mt-4" />
+                    <img src="~/hotels-starter/assets/images/bottom.jpg" alt="" class="img-fluid position-absolute img-position" />
                 </div>
             </div>
         </div>
@@ -180,7 +180,7 @@ Author URL: http://w3layouts.com
                 <div class="maghny-gd-1 col-lg-6">
                     <div class="maghny-grid">
                         <figure class="effect-lily">
-                            <img class="img-fluid" src="assets/images/room1.jpg" alt="">
+                            <img class="img-fluid" src="~/hotels-starter/assets/images/room1.jpg" alt="">
                             <figcaption class="w3set-hny">
                                 <div>
                                     <h4 class="top-text">
@@ -211,7 +211,7 @@ Author URL: http://w3layouts.com
                         <div class="maghny-gd-1 col-6">
                             <div class="maghny-grid">
                                 <figure class="effect-lily border-radius">
-                                    <img class="img-fluid" src="assets/images/room2.jpg" alt="" />
+                                    <img class="img-fluid" src="~/hotels-starter/assets/images/room2.jpg" alt="" />
                                     <figcaption>
                                         <div>
                                             <h4>Family Rooms <span> Resort</span></h4>
@@ -225,7 +225,7 @@ Author URL: http://w3layouts.com
                         <div class="maghny-gd-1 col-6">
                             <div class="maghny-grid">
                                 <figure class="effect-lily border-radius">
-                                    <img class="img-fluid" src="assets/images/room3.jpg" alt="" />
+                                    <img class="img-fluid" src="~/hotels-starter/assets/images/room3.jpg" alt="" />
                                     <figcaption>
                                         <div>
                                             <h4>Double Rooms <span> Resort</span></h4>
@@ -239,7 +239,7 @@ Author URL: http://w3layouts.com
                         <div class="maghny-gd-1 col-6 mt-4">
                             <div class="maghny-grid">
                                 <figure class="effect-lily border-radius">
-                                    <img class="img-fluid" src="assets/images/room4.jpg" alt="" />
+                                    <img class="img-fluid" src="~/hotels-starter/assets/images/room4.jpg" alt="" />
                                     <figcaption>
                                         <div>
                                             <h4>Luxury Rooms <span> Resort</span></h4>
@@ -253,7 +253,7 @@ Author URL: http://w3layouts.com
                         <div class="maghny-gd-1 col-6 mt-4">
                             <div class="maghny-grid">
                                 <figure class="effect-lily border-radius">
-                                    <img class="img-fluid" src="assets/images/room5.jpg" alt="" />
+                                    <img class="img-fluid" src="~/hotels-starter/assets/images/room5.jpg" alt="" />
                                     <figcaption>
                                         <div>
                                             <h4>Resort Rooms <span> Resort</span></h4>
@@ -275,7 +275,7 @@ Author URL: http://w3layouts.com
                 <div class="row">
                     <div class="col-lg-6 left-wthree-img text-righ">
                         <div class="position-relative">
-                            <img src="assets/images/videobg.jpg" alt="" class="img-fluid" />
+                            <img src="~/hotels-starter/assets/images/videobg.jpg" alt="" class="img-fluid" />
                             <a href="#small-dialog" class="popup-with-zoom-anim play-view text-center position-absolute">
                                 <span class="video-play-icon">
                                     <span class="fa fa-play"></span>
@@ -323,22 +323,22 @@ Author URL: http://w3layouts.com
         <div class="container py-lg-3">
             <div class="row">
                 <div class="col-lg-2 col-md-3 col-sm-4 col-6 logo-view">
-                    <img src="assets/images/logo1.jpg" alt="company-logo" class="img-fluid" />
+                    <img src="~/hotels-starter/assets/images/logo1.jpg" alt="company-logo" class="img-fluid" />
                 </div>
                 <div class="col-lg-2 col-md-3 col-sm-4 col-6 logo-view">
-                    <img src="assets/images/logo2.jpg" alt="company-logo" class="img-fluid" />
+                    <img src="~/hotels-starter/assets/images/logo2.jpg" alt="company-logo" class="img-fluid" />
                 </div>
                 <div class="col-lg-2 col-md-3 col-sm-4 col-6 logo-view mt-sm-0 mt-4">
-                    <img src="assets/images/logo3.jpg" alt="company-logo" class="img-fluid" />
+                    <img src="~/hotels-starter/assets/images/logo3.jpg" alt="company-logo" class="img-fluid" />
                 </div>
                 <div class="col-lg-2 col-md-3 col-sm-4 col-6 logo-view mt-md-0 mt-4">
-                    <img src="assets/images/logo4.jpg" alt="company-logo" class="img-fluid" />
+                    <img src="~/hotels-starter/assets/images/logo4.jpg" alt="company-logo" class="img-fluid" />
                 </div>
                 <div class="col-lg-2 col-md-3 col-sm-4 col-6 logo-view mt-lg-0 mt-4">
-                    <img src="assets/images/logo2.jpg" alt="company-logo" class="img-fluid" />
+                    <img src="~/hotels-starter/assets/images/logo2.jpg" alt="company-logo" class="img-fluid" />
                 </div>
                 <div class="col-lg-2 col-md-3 col-sm-4 col-6 logo-view mt-lg-0 mt-4">
-                    <img src="assets/images/logo1.jpg" alt="company-logo" class="img-fluid" />
+                    <img src="~/hotels-starter/assets/images/logo1.jpg" alt="company-logo" class="img-fluid" />
                 </div>
             </div>
         </div>
