--- a/OtelMvcProject/Views/Shared/_OtelVitrin.cshtml
+++ b/OtelMvcProject/Views/Shared/_OtelVitrin.cshtml
@@ -52,7 +52,7 @@ Author URL: http://w3layouts.com
                             <a class="nav-link" href="/Hizmetler/Hizmet/">Hizmetlerimiz</a>
                         </li>
                         <li class="nav-item contact__active">
-                            <a class="nav-link" href="contact.html">İletişim</a>
+                            <a class="nav-link" href="/iletisim/Index/">İletişim</a>
                         </li>
                     </ul>
                     <a href="#booking" class="ml-3 book btn btn-secondary btn-style">Rezervasyon Yap</a>
