--- a/OtelMvcProject/Views/Login/Index.cshtml
+++ b/OtelMvcProject/Views/Login/Index.cshtml
@@ -13,7 +13,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html lang="zxx">
 
 <head>
-    <title>Particles Login Form Form Responsive Widget Template :: w3layouts</title>
+    <title>Otel Giriş Formu</title>
     <!-- Meta-Tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
@@ -39,22 +39,22 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <div id="particles-js"></div>
     <!-- //particles -->
     <div class="w3ls-pos">
-        <h1>Particles Login Form</h1>
+        <h1>Otel Misafir Giriş Sayfası</h1>
         <div class="w3ls-login box">
             <!-- form starts here -->
             <form action="#" method="post">
                 <div class="agile-field-txt">
-                    <input type="email" name="email" placeholder="info@example.com" required="" />
+                    <input type="email" name="email" placeholder="info@gmail.com" required="" />
                 </div>
                 <div class="agile-field-txt">
                     <input type="password" name="password" placeholder="******" required="" id="myInput" />
                     <div class="agile_label">
-                        <input id="check3" name="check3" type="checkbox" value="show password">
-                        <label class="check" for="check3">Remember me</label>
+                        
+                        <label class="check" for="check3" href="#">Kayıt Olmak İstiyorum</label>                        
                     </div>
                 </div>
                 <div class="w3ls-bot">
-                    <input type="submit" value="LOGIN">
+                    <input type="submit" value="GİRİŞ YAP">
                 </div>
             </form>
         </div>
@@ -62,7 +62,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         <!--copyright-->
         <div class="copy-wthree">
             <p>
-                © 2018 Particles Login Form. All Rights Reserved | Design by
+                © 2022 Particles Login Form.Tüm Hakları Saklıdır. | Design by
                 <a href="http://w3layouts.com/" target="_blank">W3layouts</a>
             </p>
         </div>
