--- a/OtelMvcProject/Views/Login/Index.cshtml
+++ b/OtelMvcProject/Views/Login/Index.cshtml
@@ -50,7 +50,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <input type="password" name="password" placeholder="******" required="" id="myInput" />
                     <div class="agile_label">
                         
-                        <label class="check" for="check3" href="#">Kayıt Olmak İstiyorum</label>                        
+                        <a href="/Kayit/KayitOl/" style="color:white">Bir hesabın yok mu?</a>                        
                     </div>
                 </div>
                 <div class="w3ls-bot">
@@ -62,7 +62,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         <!--copyright-->
         <div class="copy-wthree">
             <p>
-                © 2022 Particles Login Form.Tüm Hakları Saklıdır. | Design by
+                © 2022 Particles Login Form. Tüm Hakları Saklıdır. | Design by
                 <a href="http://w3layouts.com/" target="_blank">W3layouts</a>
             </p>
         </div>
