--- a/OtelMvcProject/Views/Shared/_OtelVitrin.cshtml
+++ b/OtelMvcProject/Views/Shared/_OtelVitrin.cshtml
@@ -54,8 +54,11 @@ Author URL: http://w3layouts.com
                         <li class="nav-item contact__active">
                             <a class="nav-link" href="/iletisim/Index/">İletişim</a>
                         </li>
+                        <li class="nav-item contact__active">
+                            <a class="nav-link" href="/Login/Index/">Giriş Yap</a>
+                        </li>
                     </ul>
-                    <a href="#booking" class="ml-3 book btn btn-secondary btn-style">Rezervasyon Yap</a>
+                    <a href="/Rezervasyon/Index/" class="ml-3 book btn btn-secondary btn-style">Rezervasyon Yap</a>
                 </div>
             </div>
         </nav>
