--- a/OtelMvcProject/Views/Rezervasyon/Index.cshtml
+++ b/OtelMvcProject/Views/Rezervasyon/Index.cshtml
@@ -62,11 +62,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             </div>
             <div class="bnr-one">
                 <div class="bnr-left">
-                    <p>Yetişkin Sayısı</p>
+                    <p>Kişi Sayısı</p>
                 </div>
                 <div class="bnr-right">
                     <select>
-                       
+                        <option class="rm" value="volvo">Kişi sayısı seçin</option>
                         <option class="rm" value="saab">1</option>
                         <option class="rm" value="opel">2</option>
                         <option class="rm" value="audi">3</option>
@@ -87,21 +87,23 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             </div>
             <div class="bnr-one">
                 <div class="bnr-left">
-                    <p>Room</p>
+                    <p>Oda Türü</p>
                 </div>
                 <div class="bnr-right">
                     <select>
-                        <option value="volvo">Select a type</option>
-                        <option value="saab">Single</option>
-                        <option value="opel">Double</option>
-                        <option value="audi">Suite</option>
+                        <option value="volvo">Bir oda türü seçin</option>
+                        <option value="saab">Tek Kişilik</option>
+                        <option value="opel">Çift Kişilik</option>
+                        <option value="audi">Üç Kişilik</option>
+                        <option value="audi">Dört Kişilik</option>
+                        <option value="audi">Aile Suit</option>
                     </select>
                 </div>
                 <div class="clearfix"></div>
             </div>
             <div class="bnr-btn">
                 <form>
-                    <input type="submit" value="Book Now">
+                    <input type="submit" value="Rezervasyon Yap">
                 </form>
             </div>
         </div>
@@ -116,7 +118,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         <!---/End-date-piker---->
     </div>
     <div class="footer">
-        <p>Copyright © Luxury Hotel Booking. All Rights Reserved | Design by <a href="http://w3layouts.com" target="_blank">W3layouts</a></p>
+        <p>Copyright © Otel Rezervasyon Projesi | Tüm Hakları Saklıdır | Design by <a href="http://w3layouts.com" target="_blank">W3layouts</a></p>
     </div>
 </body>
 </html>
