Ana Sayfa Düzenlemeleri

--- a/OtelMvcProject/Views/AnaSayfa/Index.cshtml
+++ b/OtelMvcProject/Views/AnaSayfa/Index.cshtml
@@ -26,11 +26,10 @@ Author URL: http://w3layouts.com
                                 <div class="container">
                                     <div class="banner-info-bg">
                                         <h5>
-                                            Location is heavenly. Best to visit in week days to enjoy the peaceful beauty
+                                            Egenin kalbinde denize sıfır, doğaya zara vermeden doğayla iç içe bir tatil mekanı.
                                         </h5>
-                                        <a class="btn btn-style transparent-btn mt-sm-5 mt-4" href="services.html">
-                                            Our
-                                            Services
+                                        <a class="btn btn-style transparent-btn mt-sm-5 mt-4" href="/Hizmetler/Hizmet/">
+                                            Hizmetlerimiz
                                         </a>
                                     </div>
                                 </div>
@@ -44,10 +43,9 @@ Author URL: http://w3layouts.com
                             <div class="banner-info">
                                 <div class="container">
                                     <div class="banner-info-bg">
-                                        <h5>Our new hotels will play a leading role in prompting the world peace.</h5>
-                                        <a class="btn btn-style transparent-btn mt-sm-5 mt-4" href="services.html">
-                                            Our
-                                            Services
+                                        <h5>Hayal ettiğinizden çok daha fazlasını yakalamak için hemen rezervasyon yapın.</h5>
+                                        <a class="btn btn-style transparent-btn mt-sm-5 mt-4" href="/Hizmetler/Hizmet/">
+                                            Hizmetlerimiz
                                         </a>
                                     </div>
                                 </div>
@@ -62,11 +60,10 @@ Author URL: http://w3layouts.com
                                 <div class="container">
                                     <div class="banner-info-bg">
                                         <h5>
-                                            Most hotels train their people with the booklets. We take ours to the ballet.
+                                            Termal havuz, spa merkezi ve masaj salonu ile hizmetinizdeyiz.
                                         </h5>
-                                        <a class="btn btn-style transparent-btn mt-sm-5 mt-4" href="services.html">
-                                            Our
-                                            Services
+                                        <a class="btn btn-style transparent-btn mt-sm-5 mt-4" href="/Hizmetler/Hizmet/">
+                                            Hizmetlerimiz
                                         </a>
                                     </div>
                                 </div>
@@ -80,10 +77,9 @@ Author URL: http://w3layouts.com
                             <div class="banner-info">
                                 <div class="container">
                                     <div class="banner-info-bg">
-                                        <h5>Good tourism will follow good hotels. Experience our luxury hotel rooms</h5>
-                                        <a class="btn btn-style transparent-btn mt-sm-5 mt-4" href="services.html">
-                                            Our
-                                            Services
+                                        <h5>Servis hizmeti, uyguna fiyatlarla konforlu bir tatilin tadını çıkarın.</h5>
+                                        <a class="btn btn-style transparent-btn mt-sm-5 mt-4" href="/Hizmetler/Hizmet/">
+                                            Hizmetlerimiz
                                         </a>
                                     </div>
                                 </div>
