Ana Sayfa Düzenlemeleri

--- a/OtelMvcProject/Views/AnaSayfa/Index.cshtml
+++ b/OtelMvcProject/Views/AnaSayfa/Index.cshtml
@@ -151,15 +151,12 @@ Author URL: http://w3layouts.com
         <div class="container py-sm-4">
             <div class="row">
                 <div class="col-lg-6 about-left mb-md-0 mb-5">
-                    <h3 class="title-big">Relax in our Resort</h3>
-                    <h5>We make the best for all our customers.</h5>
+                    <h3 class="title-big">Otelimizde Rahatlamanın Konforunu Yaşayın</h3>
+                    <h5>Müşterilerimiz bizim misafirlerimizdir.</h5>
                     <p class="mt-3">
-                        Duis nisi sapien, elementum finibus fermentum eget, aliquet leo. Mauris hendrerit vel ex.
-                        Quisque vitae luctus massa. Phasellus sed aliquam leo. Vestibulum ullamcorper a massa eu fringilla.
-                        Integer ultrices finibus sed nisi. in convallis felis dapibus sit amet. Lorem ipsum dolor, sit
-                        amet consectetur adipisicing elit. Totam, porro! Lorem ipsum dolor sit amet.
+                        Otelimizde kalan her birey bizim için müşteri değil misafirdir. Misafirlerimizin buradan memnun ayrılması, otelimizi çevresindeki kişilere tavsiye etmesi bizler için en büyük kazanımdır. Çocuk oyun alanı, otel havuzu spa salonu, termali ve açık büfe kahvaltı imkanı ile sizleri de bekliyoruz.
                     </p>
-                    <a href="about.html" class="btn btn-style btn-primary mt-sm-5 mt-4">Learn About Us</a>
+                    <a href="/Hizmetler/Hizmet/" class="btn btn-style btn-primary mt-sm-5 mt-4">Hakkımızda</a>
                 </div>
                 <div class="col-lg-6 about-right position-relative mt-lg-0 mt-5">
                     <img src="~/hotels-starter/assets/images/top.jpg" alt="" class="img-fluid img-border mt-4" />
@@ -171,7 +168,7 @@ Author URL: http://w3layouts.com
     <!-- //about -->
     <div class="best-rooms py-5">
         <div class="container py-lg-5 py-sm-4">
-            <h3 class="title-big text-center">Best Rooms</h3>
+            <h3 class="title-big text-center">Odalarımız</h3>
             <div class="ban-content-inf row py-lg-3">
                 <div class="maghny-gd-1 col-lg-6">
                     <div class="maghny-grid">
@@ -180,25 +177,24 @@ Author URL: http://w3layouts.com
                             <figcaption class="w3set-hny">
                                 <div>
                                     <h4 class="top-text">
-                                        Luxury Hotel and Best Resort
-                                        <span>Peaceful Place to stay</span>
+                                        MVC Proje Oteli 
+                                        <span>Konaklamak İçin Doğru Yer</span> @*Muğla Akyaka - Datça - Fethiye*@
                                     </h4>
-                                    <p>From 20$ </p>
+                                    <p>20$'dan başlayan fiyatlar </p>
                                 </div>
                             </figcaption>
                         </figure>
                         <div class="room-info">
-                            <h3 class="room-title"><a href="room-single.html">Luxury Hotel</a></h3>
+                            <h3 class="room-title"><a href="room-single.html">MVC Proje Oteli</a></h3>
                             <ul class="mb-3">
-                                <li><span class="fa fa-users"></span> 2 Guests</li>
-                                <li><span class="fa fa-bed"></span> Double bed</li>
+                                <li><span class="fa fa-users"></span> 2 Kişi</li>
+                                <li><span class="fa fa-bed"></span> Çift Kişilik Yatak</li>
                                 <li><span class="fa fa-bed"></span> 15sqft</li>
                             </ul>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. A recusandae, illum sequi numquam
-                                tempora voluptates?
+                                En güzel odamızda doğaya zara verilmeden açılan pencerede yemyeşil ve masmavi bir manzaraya uyanmak ister misiniz?
                             </p>
-                            <a href="#book" class="btn btn-style btn-primary mt-sm-4 mt-3">Book Now</a>
+                            <a href="/Rezervasyon/Index/" class="btn btn-style btn-primary mt-sm-4 mt-3">Rezervasyon Yap</a>
                         </div>
                     </div>
                 </div>
