--- a/OtelMvcProject/Views/AnaSayfa/Index.cshtml
+++ b/OtelMvcProject/Views/AnaSayfa/Index.cshtml
@@ -178,9 +178,10 @@ Author URL: http://w3layouts.com
                                 <div>
                                     <h4 class="top-text">
                                         MVC Proje Oteli 
-                                        <span>Konaklamak İçin Doğru Yer</span> @*Muğla Akyaka - Datça - Fethiye*@
+                                        <span> <br />
+                                        Özel Suit Odalar</span> @*Muğla Akyaka - Datça - Fethiye*@
                                     </h4>
-                                    <p>20$'dan başlayan fiyatlar </p>
+                                    <p>30$'dan başlayan fiyatlar </p>
                                 </div>
                             </figcaption>
                         </figure>
@@ -206,8 +207,8 @@ Author URL: http://w3layouts.com
                                     <img class="img-fluid" src="~/hotels-starter/assets/images/room2.jpg" alt="" />
                                     <figcaption>
                                         <div>
-                                            <h4>Family Rooms <span> Resort</span></h4>
-                                            <p>From 20$ </p>
+                                            <h4>Aile Odaları<span> </span></h4>
+                                            <p>25$'dan başlayan fiyatlar </p>
                                         </div>
 
                                     </figcaption>
@@ -220,8 +221,8 @@ Author URL: http://w3layouts.com
                                     <img class="img-fluid" src="~/hotels-starter/assets/images/room3.jpg" alt="" />
                                     <figcaption>
                                         <div>
-                                            <h4>Double Rooms <span> Resort</span></h4>
-                                            <p>From 20$ </p>
+                                            <h4>İki Kişilik<span> Odalar</span></h4>
+                                            <p>20$'dan başlayan fiyatlar </p>
                                         </div>
 
                                     </figcaption>
@@ -234,8 +235,8 @@ Author URL: http://w3layouts.com
                                     <img class="img-fluid" src="~/hotels-starter/assets/images/room4.jpg" alt="" />
                                     <figcaption>
                                         <div>
-                                            <h4>Luxury Rooms <span> Resort</span></h4>
-                                            <p>From 20$ </p>
+                                            <h4>Tek Kişilik <span> Odalar</span></h4>
+                                            <p>17$'dan başlayan fiyatlar </p>
                                         </div>
 
                                     </figcaption>
@@ -248,8 +249,8 @@ Author URL: http://w3layouts.com
                                     <img class="img-fluid" src="~/hotels-starter/assets/images/room5.jpg" alt="" />
                                     <figcaption>
                                         <div>
-                                            <h4>Resort Rooms <span> Resort</span></h4>
-                                            <p>From 20$ </p>
+                                            <h4>Dubleks<span> Odalar</span></h4>
+                                            <p>40$'dan başlayan fiyatlar </p>
                                         </div>
 
                                     </figcaption>
@@ -280,20 +281,19 @@ Author URL: http://w3layouts.com
                         </div>
                     </div>
                     <div class="col-lg-6 mt-lg-0 mt-5 about-right-faq align-self">
-                        <h6>Discover our Locations</h6>
-                        <h3 class="title-big">20 Years of Hotels and Resort Experience</h3>
+                        <h6>Turizm Sektöründe</h6>
+                        <h3 class="title-big">50 Yıllık Otel ve İşletme Deneyimi</h3>
                         <p class="mt-3">
-                            Lorem ipsum viverra feugiat. Pellen tesque libero ut justo,
-                            ultrices in ligula. Semper at tempufddfel.
+                           Muğla, Balıkesir, Antalya ve Giresun'daki otellerimizle siz değerli misafilerimize hizmet vermeye devam ediyoruz.
                         </p>
                         <ul class="w3l-right-book mt-4">
-                            <li><span class="fa fa-check" aria-hidden="true"></span>We make the best for all our customers</li>
-                            <li><span class="fa fa-check" aria-hidden="true"></span>Follow our Resort Luxury Hotels</li>
-                            <li><span class="fa fa-check" aria-hidden="true"></span>Luxury hotels and best resorts</li>
-                            <li><span class="fa fa-check" aria-hidden="true"></span>Double rooms and family rooms</li>
-                            <li><span class="fa fa-check" aria-hidden="true"></span>Enjoy a luxury experience</li>
+                            <li><span class="fa fa-check" aria-hidden="true"></span>Misafirlerimiz için en iyi hizmetler</li>
+                            <li><span class="fa fa-check" aria-hidden="true"></span>7/24 servis ve sıcak su</li>
+                            <li><span class="fa fa-check" aria-hidden="true"></span>Ege'nin en doğal oteli</li>
+                            <li><span class="fa fa-check" aria-hidden="true"></span>Üstün kalite ve çok çeşitli oda türleri</li>
+                            <li><span class="fa fa-check" aria-hidden="true"></span>Eşsiz bir deneyim, keyifli bir tatil</li>
                         </ul>
-                        <a href="about.html" class="btn btn-style btn-primary mt-4">Check all packages</a>
+                        <a href="/Rezervasyon/Index/" class="btn btn-style btn-primary mt-4">Rezervasyon Yap</a>
                     </div>
                 </div>
             </div>
@@ -303,9 +303,9 @@ Author URL: http://w3layouts.com
     <div class="quotation py-5">
         <div class="container py-xl-5 py-lg-3">
             <div class="welcome-left text-center py-md-5 py-3">
-                <h3>Enjoy a Luxury experience. Discover our locaions. Relax and enjoy your holiday</h3>
-                <a href="booking.html" class="btn btn-style transparent-btn mt-sm-5 mt-4 mr-2">Book Now</a>
-                <a href="contact.html" class="btn btn-style btn-primary mt-sm-5 mt-4">Contact Us</a>
+                <h3>Deneyimin Tadını Çıkarın! Rahatlayın ve günlük hayatın stesini geride bırakın. Güneş ve denizle başbaşa kalın.</h3>
+                <a href="/Rezervasyon/Index/" class="btn btn-style transparent-btn mt-sm-5 mt-4 mr-2">Rezervasyon Yap</a>
+                <a href="/iletisim/Index/" class="btn btn-style btn-primary mt-sm-5 mt-4">Bize Ulaşın</a>
             </div>
         </div>
     </div>
