Veritabanından view'e veriler çekildi

--- a/OtelMvcProject/Views/Default/Hakkimizda.cshtml
+++ b/OtelMvcProject/Views/Default/Hakkimizda.cshtml
@@ -62,7 +62,7 @@
                                 <img class="img-fluid" src="~/hotels-starter/assets/images/about3.jpg">
                                 <figcaption class="w3set-hny">
                                     <div>
-                                        <h4>Hem Aileler hem de Kişilere</h4>
+                                        <h4>Hem Ailelere hem de Kişilere</h4>
                                         <p>Özel Odalar</p>
                                     </div>
                                 </figcaption>
@@ -82,7 +82,7 @@
                 </div>
                 <div class="row w3-services-grids">
                     <div class="col-lg-9 w3-services-right-grid pl-lg-5 mx-auto">
-                        <h4 class="mb-md-5 mb-4">Doing the right thing, at the right time</h4>
+                        <h4 class="mb-md-5 mb-4">Doğru hizmeti doğru zamanda sizlere sunuyoruz.</h4>
                         <div class="fea-gd-vv row">
                             <div class="col-md-6">
                                 <div class="float-lt feature-gd">
@@ -224,14 +224,9 @@
             <div class="container py-lg-3">
                 <div class="row align-items-center">
                     <div class="col-lg-6 title">
-                        <h3 class="title-big">We have a great funfact! Relax & Enjoy your Holiday</h3>
+                        <h3 class="title-big">@x.Hakkimda3</h3>
                         <p class="mt-4">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo, soluta impedit.
-                            Consequatur,
-                            quasi mollitia? Adipisci exercitationem amet dolore expedita repudiandae voluptatem impedit ipsa
-                            vero
-                            repellendus? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio molestiae ex aut
-                            possimus atque explicabo nostrum recusandae ab quisquam at!
+                            @x.Hakkimda4
                         </p>
                     </div>
                     <div class="col-lg-6 main-cont-wthree-fea text-center">
