--- a/OtelMvcProject/Views/Hizmetler/Hizmet.cshtml
+++ b/OtelMvcProject/Views/Hizmetler/Hizmet.cshtml
@@ -15,8 +15,8 @@
         <div class="breadcrum-bg py-sm-5 py-4">
             <div class="container py-lg-3">
 
-                <h2>Our Services</h2>
-                <p><a href="index.html">Home</a> &nbsp; / &nbsp; Services</p>
+                <h2>Hizmetlerimiz</h2>
+                <p><a href="/Anasayfa/Index/">Ana Sayfa</a> &nbsp; / &nbsp; Hizmetlerimiz</p>
 
             </div>
         </div>
@@ -28,10 +28,9 @@
                 <div class="features-with-17-top_sur">
                     <div class="row">
                         <div class="col-lg-4 col-md-6 align-self">
-                            <h3 class="title-small">Luxury Hotel Services</h3>
+                            <h3 class="title-small">MVC Otel Projesi</h3>
                             <p>
-                                Our rooms are beautifully designed and comfortable and can accommodate various groups of
-                                travelers. All rooms have private bathrooms, a flat-screen TV and a safe.
+                                Bütün odalarımızda mini buzdolabı, televizyon, wi-fi, sıcak su, dolap, balkon ve klima gibi bileşenlerin tamamı bulunmaktadır. 7/24 Resepsiton telefonunu arayabilirsiniz.
                             </p>
                         </div>
                         <div class="col-lg-4 col-md-6 mt-md-0 mt-4">
@@ -40,11 +39,10 @@
                                     <span class="fa fa-bed" aria-hidden="true"></span>
                                 </div>
                                 <div class="features-with-17-left2">
-                                    <h5>Fitness Zone</h5>
-                                    <h6><a href="#url">Swimming Pool</a></h6>
+                                    <h5>Fitness Alanı</h5>
+                                    <h6><a href="#url">Yüzme Havuzu</a></h6>
                                     <p>
-                                        Lorem ipsum dolor sit amet elit. Id, minima. It is a long fact that a reader will be
-                                        distracted by the readable.
+                                        Yetişkinler ve çocuklar için yüzme havuzu ve şezlong & şemsiye hizmetlerimiz yer almaktadır.
                                     </p>
                                 </div>
                             </div>
@@ -55,11 +53,10 @@
                                     <span class="fa fa-beer" aria-hidden="true"></span>
                                 </div>
                                 <div class="features-with-17-left2">
-                                    <h5>Food & Drinks</h5>
-                                    <h6><a href="#url">Restaurant and Bar</a></h6>
+                                    <h5>Yiyecek & İçecek </h5>
+                                    <h6><a href="#url">Restoran ve Bar</a></h6>
                                     <p>
-                                        Lorem ipsum dolor sit amet elit. Id, minima. It is a long fact that a reader will be
-                                        distracted by the readable.
+                                        Restoranımız saat 08:00 - 23:30 arası, barımız 10:00-02:00 arası hizmet vermektedir.
                                     </p>
                                 </div>
                             </div>
@@ -70,11 +67,10 @@
                                     <span class="fa fa-wifi" aria-hidden="true"></span>
                                 </div>
                                 <div class="features-with-17-left2">
-                                    <h5>Accommodation</h5>
-                                    <h6><a href="#url">High speed WiFi</a> </h6>
+                                    <h5>Ekstra Hizmetler</h5>
+                                    <h6><a href="#url">Fiber Wi-fi</a> </h6>
                                     <p>
-                                        Lorem ipsum dolor sit amet elit. Id, minima. It is a long fact that a reader will be
-                                        distracted by the readable.
+                                        Otelimizin tüm odalarında, katlarda, barda, restoranda ve havuz kenarında 350mb wi-fi hizmetimiz vardır.
                                     </p>
                                 </div>
                             </div>
@@ -85,11 +81,10 @@
                                     <span class="fa fa-bed" aria-hidden="true"></span>
                                 </div>
                                 <div class="features-with-17-left2">
-                                    <h5>Comfort & Relax</h5>
-                                    <h6><a href="#url">SPA & Wellness</a> </h6>
+                                    <h5>Rahatların & Gevşeyin</h5>
+                                    <h6><a href="#url">SPA & Sauna</a> </h6>
                                     <p>
-                                        Lorem ipsum dolor sit amet elit. Id, minima. It is a long fact that a reader will be
-                                        distracted by the readable.
+                                        7/24 Sıcak su hizmetiyle otelimizin spa ve sauna salonlarından istediğiniz an faydalanabilirsiniz.
                                     </p>
                                 </div>
                             </div>
@@ -97,14 +92,13 @@
                         <div class="col-lg-4 col-md-6 mt-sm-5 mt-4">
                             <div class="features-with-17-right-tp_sur">
                                 <div class="features-with-17-left1">
-                                    <span class="fa fa-headphones" aria-hidden="true"></span>
+                                    <span class="fa fa-car" aria-hidden="true"></span>
                                 </div>
                                 <div class="features-with-17-left2">
-                                    <h5>Safe & Secure </h5>
-                                    <h6><a href="#url">Staff 24/7</a> </h6>
+                                    <h5>Otopark </h5>
+                                    <h6><a href="#url">Park Yeri Desteği</a> </h6>
                                     <p>
-                                        Lorem ipsum dolor sit amet elit. Id, minima. It is a long fact that a reader will be
-                                        distracted by the readable.
+                                        Otelimizdeki açık ve kapalı otopark alanlarımızdan misafirlerimiz tatilleri süresince ücretsiz olarak faydalanabilir.
                                     </p>
                                 </div>
                             </div>
