--- a/OtelMvcProject/Views/Hizmetler/Hizmet.cshtml
+++ b/OtelMvcProject/Views/Hizmetler/Hizmet.cshtml
@@ -113,7 +113,7 @@
             <div class="container py-lg-3">
                 <div class="row align-items-center">
                     <div class="col-md-6 title">
-                        <h3 class="title-big">Our Hotel Facilities</h3>
+                        <h3 class="title-big">Otelimizin Tesisleri</h3>
                         <img src="~/hotels-starter/assets/images/facilities.jpg" alt="" class="img-fluid">
                     </div>
                     <div class="col-md-6 main-cont-wthree-fea text-center">
@@ -122,28 +122,28 @@
                                 <div class="grids-speci1">
                                     <span class="fa fa-television"></span>
                                     <h3 class="title-spe">Tv</h3>
-                                    <p> Satellite</p>
+                                    <p> Uydu</p>
                                 </div>
                             </div>
                             <div class="col-6 pl-2 mt-4">
                                 <div class="grids-speci1">
                                     <span class="fa fa-motorcycle"></span>
-                                    <h3 class="title-spe">Bike</h3>
-                                    <p>Rental</p>
+                                    <h3 class="title-spe">Bisiklet</h3>
+                                    <p>Ücretsiz Kiralama</p>
                                 </div>
                             </div>
                             <div class="col-6 pr-2 mt-4">
                                 <div class="grids-speci1">
                                     <span class="fa fa-cutlery"></span>
-                                    <h3 class="title-spe">Food</h3>
-                                    <p>Included</p>
+                                    <h3 class="title-spe">Yemek</h3>
+                                    <p>Açık Büfe</p>
                                 </div>
                             </div>
                             <div class="col-6 pl-2 mt-4">
                                 <div class="grids-speci1">
                                     <span class="fa fa-bed"></span>
-                                    <h3 class="title-spe">Bed</h3>
-                                    <p>King size</p>
+                                    <h3 class="title-spe">Yatak</h3>
+                                    <p>Tam Konfor</p>
                                 </div>
                             </div>
                         </div>
