--- a/OtelMvcProject/Views/Hizmetler/Hizmet.cshtml
+++ b/OtelMvcProject/Views/Hizmetler/Hizmet.cshtml
@@ -156,39 +156,33 @@
     <section class="w3l-feature-2">
         <div class="grid top-bottom py-5">
             <div class="container py-md-5">
-                <h3 class="title-big text-center">Our Rooms are beautifully designed</h3>
+                <h3 class="title-big text-center">Odalarımız sizler için estetikle dizayn edildi.</h3>
                 <div class="middle-section row mt-lg-5 pt-md-3">
                     <div class="three-grids-columns col-lg-4 col-md-6">
                         <img src="~/hotels-starter/assets/images/slide1.jpg" alt="" class="img-fluid">
                         <div class="info">
-                            <h4><a href="#url"> Restaurant and Bar</a></h4>
+                            <h4><a href="#url"> Restoran ve Bar</a></h4>
                             <p>
-                                Vestibulum ante ipsum primis in orci luctus et ultrices posuere cubilia Curae; Nulla
-                                mollis dapibus nunc.
-                            </p>
-                            <a href="services.html" class="btn mt-4">Read More </a>
+                                Restoranımız saat 08:00 - 23:30 arası, barımız 10:00-02:00 arası hizmet vermektedir.
+                            </p>                            
                         </div>
                     </div>
                     <div class="three-grids-columns col-lg-4 col-md-6 mt-md-0 mt-4">
                         <img src="~/hotels-starter/assets/images/slide2.jpg" alt="" class="img-fluid">
                         <div class="info">
-                            <h4> <a href="#url"> Meetings and Events </a></h4>
+                            <h4> <a href="#url">Organizasyonlar </a></h4>
                             <p>
-                                Vestibulum ante ipsum primis in orci luctus et ultrices posuere cubilia Curae; Nulla
-                                mollis dapibus nunc.
-                            </p>
-                            <a href="services.html" class="btn mt-4">Read More </a>
+                                Kurumsal müşterileriniz için sunduğumuz yemek ve içecek dahil toplantı etkinliklerinizi planlayabilirsiniz.
+                            </p>                            
                         </div>
                     </div>
                     <div class="three-grids-columns col-lg-4 col-md-6 mt-lg-0 mt-4">
                         <img src="~/hotels-starter/assets/images/slide3.jpg" alt="" class="img-fluid">
                         <div class="info">
-                            <h4> <a href="#url"> Spa and Wellness </a></h4>
+                            <h4> <a href="#url"> SPA ve Sauna </a></h4>
                             <p>
-                                Vestibulum ante ipsum primis in orci luctus et ultrices posuere cubilia Curae; Nulla
-                                mollis dapibus nunc.
-                            </p>
-                            <a href="services.html" class="btn mt-4">Read More </a>
+                                7/24 Sıcak su hizmetiyle otelimizin spa ve sauna salonlarından istediğiniz an faydalanabilirsiniz. 
+                            </p>                            
                         </div>
                     </div>
                 </div>
