--- a/OtelMvcProject/Views/iletisim/Index.cshtml
+++ b/OtelMvcProject/Views/iletisim/Index.cshtml
@@ -19,8 +19,8 @@ Author URL: http://w3layouts.com
     <section class="w3l-breadcrumb">
         <div class="breadcrum-bg py-sm-5 py-4">
             <div class="container py-lg-3">
-                <h2>Contact Us</h2>
-                <p><a href="index.html">Home</a> &nbsp; / &nbsp; Contact</p>
+                <h2>İletişim</h2>
+                <p><a href="/Anasayfa/Index/">Ana Sayfa</a> &nbsp; / &nbsp; İletişim</p>
 
             </div>
         </div>
@@ -31,8 +31,8 @@ Author URL: http://w3layouts.com
             <div class="container">
                 <div class="d-grid contact-view">
                     <div class="cont-details">
-                        <p>Get in touch</p>
-                        <h3 class="title-big">Contact and Access</h3>
+                        <p>Bize Ulaşmak Çok Kolay!</p>
+                        <h3 class="title-big">İletişim Bilgilerimiz</h3>
                     </div>
                     <div class="map-content-9">
                         <p>
