--- a/OtelMvcProject/Views/Kayit/KayitOl.cshtml
+++ b/OtelMvcProject/Views/Kayit/KayitOl.cshtml
@@ -1,13 +1,9 @@
-﻿
+﻿@model OtelMvcProject.Models.Entity.TblYeniKayit
+
 @{
     Layout = null;
 }
 
-<!--Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
@@ -36,22 +32,22 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <div class="header-bottom">
                 <div class="header-right w3agile">
                     <div class="header-left-bottom agileinfo">
-                        <form action="#" method="post">
+                        <form method="post">
                             <div class="icon1">
                                 <i class="fa fa-user" aria-hidden="true"></i>
-                                <input type="text" placeholder="Adınız Soyadınız" name="fullname" required="" />
+                                <input type="text" placeholder="Adınız Soyadınız" name="AdSoyad" required="" />
                             </div>
                             <div class="icon1">
                                 <i class="fa fa-envelope" aria-hidden="true"></i>
-                                <input type="email" placeholder="Mail" name="email" required="" />
+                                <input type="email" placeholder="Mail" name="Mail" required="" />
                             </div>
                             <div class="icon1">
                                 <i class="fa fa-phone" aria-hidden="true"></i>
-                                <input type="tel" placeholder="Telefon Numaranız" name="phonenumber" required="" />
+                                <input type="tel" placeholder="Telefon Numaranız" name="Telefon" required="" />
                             </div>
                             <div class="icon1">
                                 <i class="fa fa-lock" aria-hidden="true"></i>
-                                <input type="password" placeholder="Şifreniz" name="password" required="" />
+                                <input type="password" placeholder="Şifreniz" name="Sifre" required="" />
                             </div>
                             <div class="login-check">
                                 <label class="checkbox"><input type="checkbox" name="checkbox" checked=""><i> </i>Kullanıcı şartlarını okudum.<a href="#">Kabul &amp;ediyorum.</a></label>
