Giriş Yapma İşlemi

--- a/OtelMvcProject/Views/Login/Index.cshtml
+++ b/OtelMvcProject/Views/Login/Index.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model OtelMvcProject.Models.Entity.TblYeniKayit
+
 @{
     Layout = null;
 }
@@ -42,12 +43,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         <h1>Otel Misafir Giriş Sayfası</h1>
         <div class="w3ls-login box">
             <!-- form starts here -->
-            <form action="#" method="post">
+            <form method="post">
                 <div class="agile-field-txt">
-                    <input type="email" name="email" placeholder="info@gmail.com" required="" />
+                    <input type="email" name="Mail" placeholder="info@gmail.com" required="" />
                 </div>
                 <div class="agile-field-txt">
-                    <input type="password" name="password" placeholder="******" required="" id="myInput" />
+                    <input type="password" name="Sifre" placeholder="******" required="" />
                     <div class="agile_label">
                         
                         <a href="/Kayit/KayitOl/" style="color:white">Bir hesabın yok mu?</a>                        
