--- a/OtelMvcProject/Views/AnaSayfa/Index.cshtml
+++ b/OtelMvcProject/Views/AnaSayfa/Index.cshtml
@@ -26,7 +26,7 @@ Author URL: http://w3layouts.com
                                 <div class="container">
                                     <div class="banner-info-bg">
                                         <h5>
-                                            Egenin kalbinde denize sıfır, doğaya zara vermeden doğayla iç içe bir tatil mekanı.
+                                            Egenin kalbinde denize sıfır, doğaya zarar vermeden doğayla iç içe bir tatil mekanı.
                                         </h5>
                                         <a class="btn btn-style transparent-btn mt-sm-5 mt-4" href="/Hizmetler/Hizmet/">
                                             Hizmetlerimiz
